--- a/package.json
+++ b/package.json
@@ -1,5 +1,9 @@
 {
   "dependencies": {
+    "axios": "^1.7.9",
     "vite": "^6.0.11"
+  },
+  "devDependencies": {
+    "json-server": "^1.0.0-beta.3"
   }
 }
